# google-sheets-api-integration

./: .gitignore  CLAUDE_CODE_WEB_RESPONSES.md  HANDOFF_TO_CLAUDE_CODE_WEB.md  README.md  SPECIFICATION.md  TECHNICAL_DEBT.md  google_sheets_integration.py  pyproject.toml  requirements-dev.txt  sheets_helper.py
docs/: service-account-setup.md  setup.md  troubleshooting.md
reference-files/: README.md
reference-files/github_api/: README.md  create_github_issue.py  github_issue_helper.py  pyproject.toml  requirements-dev.txt
reference-files/linear_API/: README.md  create_linear_issue.py  issue_helper.py
tests/: __init__.py  test_google_sheets_integration.py  test_sheets_helper.py
