[project]
name = "google-sheets-api-integration"
version = "1.0.0"
description = "Python library for reading from and writing to Google Sheets programmatically"
requires-python = ">=3.7"

[tool.ruff]
line-length = 100
target-version = "py37"

# Exclude patterns
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable select rule sets
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

# Ignore specific rules if needed
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["google_sheets_integration", "sheets_helper"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

# Start with looser settings, can tighten later
disallow_any_generics = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = "googleapiclient.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.oauth2.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
